--- a/products/pretreatment/index.html
+++ b/products/pretreatment/index.html
@@ -29,30 +29,58 @@
   <meta name="twitter:title" id="twTitle" content="กรด/ด่างล้างไขมัน • อัลตร้าโซนิค | Baume Chemical">
   <meta name="twitter:description" id="twDesc" content="กรด/ด่างล้างไขมัน และอัลตร้าโซนิคสำหรับ Pretreatment ก่อนชุบ ทีมเทคนิคช่วยเลือกสูตรให้เหมาะกับไลน์ของคุณ">
 
-  <!-- JSON-LD: Organization -->
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"Organization","name":"Baume Chemical","url":"https://www.baumechemical.com/","logo":"https://www.baumechemical.com/assets/logo.png","sameAs":["https://line.me/ti/p/~baumechemical"]}
-  </script>
-  <!-- JSON-LD: CollectionPage (URL aligned) -->
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"CollectionPage","name":"Pretreatment Cleaners","inLanguage":"th","url":"https://www.baumechemical.com/products/pretreatment/","description":"น้ำยาทำความสะอาดก่อนชุบ: กรด ด่าง และอัลตร้าโซนิค"}
-  </script>
-  <!-- JSON-LD: Breadcrumb -->
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "CollectionPage",
+  "name": "Pretreatment — Degreasing & Ultrasonic",
+  "url": "https://www.baumechemical.com/products/pretreatment/",
+  "description": "หมวด Pretreatment ครอบคลุมกรดล้างไขมัน ด่างล้างไขมัน และอัลตร้าโซนิค พร้อมอัตราส่วนใช้งานจริง.",
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "Baume Chemical",
+    "url": "https://www.baumechemical.com/"
+  },
+  "mainEntity": {
+    "@type": "ItemList",
+    "itemListOrder": "ItemListOrderAscending",
+    "numberOfItems": 3,
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Acid Cleaner Pretreatment",
+        "url": "https://www.baumechemical.com/products/pretreatment/acidclean.html"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Alkaline Cleaner Pretreatment",
+        "url": "https://www.baumechemical.com/products/pretreatment/soakclean.html"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Ultrasonic Cleaner Pretreatment",
+        "url": "https://www.baumechemical.com/products/pretreatment/ultrasonic.html"
+      }
+    ]
+  }
+}
+</script>
+
+<!-- Breadcrumb -->
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"BreadcrumbList",
+  "itemListElement":[
     {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-    {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
-    {"@type":"ListItem","position":3,"name":"Pretreatment Cleaners","item":"https://www.baumechemical.com/products/pretreatment/"}
-  ]}
-  </script>
-  <!-- JSON-LD: ItemList (section anchors) -->
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"ItemList","name":"Pretreatment Cleaning Chemicals","itemListOrder":"https://schema.org/ItemListOrderAscending","itemListElement":[
-    {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/products/pretreatment/#acid"},
-    {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/products/pretreatment/#alkaline"},
-    {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/products/pretreatment/#ultrasonic"}
-  ]}
-  </script>
+    {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
+    {"@type":"ListItem","position":3,"name":"Pretreatment","item":"https://www.baumechemical.com/products/pretreatment/"}
+  ]
+}
+</script>
 
   <!-- Fonts & Perf -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
